Setting up eslint and tsconfig

--- a/package.json
+++ b/package.json
@@ -7,15 +7,19 @@
     "ss-generate": "./bin/index.js"
   },
   "scripts": {
-    "start": "node ./lib/index.js"
+    "start": "node ./lib/index.js",
+    "lint":  "eslint src/ --fix"
   },
   "keywords": [],
-  "author": "",
+  "author": "Kevin Izuchukwu",
   "license": "ISC",
   "dependencies": {
     "chalk": "^4.1.0"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.18.0",
+    "@typescript-eslint/parser": "^2.18.0",
+    "eslint": "^6.7.2",
     "typescript": "^4.0.2"
   }
 }
