--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "start": "node libv/index.js",
-    "lint": "eslint src/ --fix"
+    "lint": "eslint src/** --fix"
   },
   "keywords": [],
   "author": "Kevin Izuchukwu",
@@ -21,6 +21,7 @@
     "@typescript-eslint/eslint-plugin": "^2.18.0",
     "@typescript-eslint/parser": "^2.18.0",
     "eslint": "^6.7.2",
+    "eslint-plugin-promise": "^4.2.1",
     "typescript": "^4.0.2"
   }
 }
