--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "This is used to generate projects based on our stranerd schools software",
   "main": "libv/index.js",
   "bin": {
-    "ss-generate": "./bin/index.js"
+    "ss-generate": "bin/ss-generate.js"
   },
   "scripts": {
-    "start": "node libv/index.js",
+    "build": "tsc --build",
     "lint": "eslint src/** --fix"
   },
   "keywords": [],
