--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,15 +6,11 @@
 	    "outDir": "lib",
 	    "sourceMap": false,
 	    "strict": true,
-	    "baseUrl": ".",
+	    "baseUrl": "src",
 	    "target": "es2017",
 	    "removeComments": true,
 	    "noImplicitAny": true
-	  },
-	"compileOnSave": true,
-	"include": [
-		"./src"
-	],
+	},
 	"exclude": [
 		"node_modules"
 	]
