--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ss-generate": "bin/ss-generate.js"
   },
   "scripts": {
-    "build": "tsc --build",
+    "build": "npm run build && tsc --build",
     "lint": "eslint src/** --fix"
   },
   "keywords": [],
